# jobhuntr

./: .gitignore  .travis.yml  Deprecated_VPS_Version-20022016.txz  LICENSE  Pipfile  Procfile  README.md  app.json  cron.sh  dev_requirements.txt  firewall.sh  manage.py  pyproject.toml  requirements.txt  uwsgi.ini  vps_hardware_specs.txt
.dev_xapian_index/: iamchert  position.DB  position.baseB  postlist.DB  postlist.baseB  record.DB  record.baseB  termlist.DB  termlist.baseB
.github/workflows/: cicd.yml
_fls/: cron.sh  pip-upgradeoutdated.sh
analytics/: views.py
ansible/roles/serverbase/defaults/: main.yml
ansible/roles/serverbase/files/: firewall.sh  install_xapian.sh
ansible/roles/serverbase/handlers/: main.yml
ansible/roles/serverbase/tasks/: main.yml
ansible/roles/serverbase/vars/: main.yml
deployment_ansible/: hosts
jobhuntr/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
search/: admin.py  apps.py  models.py  search_indexes.py  tests.py  views.py
search/management/commands/: remove_expired.py  spider.py
search/migrations/: 0001_initial.py  0002_auto_20151203_0930.py  0002_auto_20160225_1221.py  0003_auto_20160222_1253.py  0004_auto_20160222_1339.py
search/templates/: search.html
search/templatetags/: global_settings.py
spider/: models.py
spidr/: scrapy.cfg
spidr/spidr/: items.py  pipelines.py  settings.py
spidr/spidr/spiders/: jobhuntr_spider.py
static_global/css/: jobhuntr.css
static_global/js/: google_analytics.js  jobhuntr.js
templates/: base.html  countries.html
templates/search/: search.html
(+3 files in other folders)
